# recurrent_homer

./: .gitignore  README.md  pyproject.toml
docs/: modelling_approach.md
recurrent_homer/: App.py  app.py  constants.py  fine_tune_homer.py  preprocess.py  test.py  train.py  train_wiki.py  utils.py
recurrent_homer/jobs/: __init__.py  _fine_tune_homer.py  _preprocess_homer_set.py  _preprocess_wiki_set.py  _train_recurrent_model.py  _train_wiki_model.py  inference.py  utils.py
recurrent_homer/model/: inference.py  one_step_forecaster.py  recurrent_model.py  text_vectorizer.py
recurrent_homer/pages/: 1_About_the_project.py
scripts/: project_setup.sh
