[tool.poetry]
name = "recurrent-homer"
version = "0.1.0"
description = ""
authors = ["CesarCMa <mrsequin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2"
tensorflow = "^2.15"
streamlit = "^1.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
